# enews

./: .gitignore  AUTHORS  build.sh  clean.sh  configure.ac
data/: Makefile.am  enews.edc
src/: Makefile.am  core.c  dashboard.c  enews.c  enews.h  utils.c
tools/: rss_server.py
